--- a/main.css
+++ b/main.css
@@ -2,9 +2,12 @@ body {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     color: #000000;
+    margin: 0;
+    padding: 0;
 }
 header {
     padding: 20px 0;
+    background-color: #ffffff;
 }
 
 header .row,
@@ -31,8 +34,11 @@ header p {
 .jumbotron {
     display: flex;
     align-items: center;
-    background-color: #5b23ba;
+    /*background-color: #5b23ba;*/
+    background-image: url("Images/First\ Pic.PNG");
     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     color: #5b23ba;
     height: 500px;
     text-shadow: 0.25px 0.25px 0.25px #000000;
@@ -50,6 +56,11 @@ header p {
     color: #000000;
 }
 
+section .row img {
+    margin: 0 0 30px;
+    width: 100%;
+}
+
 .btn.btn-primary {
     border-radius: 2px;
     border: 0px;
@@ -61,4 +72,14 @@ header p {
 .btn.btn-primary:hover {
     color: #ffffff;
     background-color: #fbd1d5;
+}
+
+footer {
+    margin: 20px 0 0 0;
+    font-size: 12px;
+    padding: 30px 0;
+    border-style: solid;
+    border-color: #000000;
+    background-size: cover;
+    width: 100%;
 }
