--- a/main.css
+++ b/main.css
@@ -5,6 +5,7 @@ body {
     background-color: #2f3030;
     margin: 0;
     padding: 0;
+    height: 100vh;
 }
 header {
     padding: 20px 0;
@@ -81,7 +82,7 @@ section .row img {
 }
 
 footer {
-    margin: 20px 0 0 0;
+    margin: 20px auto 0 auto;
     font-size: 12px;
     padding: 30px 0;
     border-style: solid;
@@ -89,4 +90,5 @@ footer {
     background-size: cover;
     width: 100%;
     background-color: #505252;
+    
 }
