--- a/main.css
+++ b/main.css
@@ -39,6 +39,31 @@ header p {
     margin: 0;
 }
 
+header a {
+    color: #000000;
+    font-size: 2vh;
+    font-weight: bold;
+    text-decoration: none;
+}
+header a:visited {
+    color: #000000;
+    font-size: 2vh;
+    text-decoration: none;
+}
+header a:hover {
+    color: #000000;
+    font-size: 2vh;
+    text-decoration: none;
+}
+header a:active {
+    color: #000000;
+    font-size: 2vh;
+    text-decoration: none;
+}
+header p:hover {
+    background-color: #3c3d3d;
+}
+
 .jumbotron {
     display: flex;
     align-items: center;
