--- a/Contact.css
+++ b/Contact.css
@@ -26,7 +26,7 @@ input[type=submit]:hover {
 }
 
 /* Add a background color and some padding around the form */
-.container {
+#inputs {
     border-radius: 5px;
     background-color: #3c3d3d;
     padding: 20px;
