--- a/Contact.css
+++ b/Contact.css
@@ -28,7 +28,8 @@ input[type=submit]:hover {
 /* Add a background color and some padding around the form */
 #inputs {
     border-radius: 5px;
-    background-color: #3c3d3d;
+    /*background-color: #3c3d3d;*/
+    background-color: #888888;
     padding: 20px;
 } 
 
