--- a/main.css
+++ b/main.css
@@ -9,7 +9,8 @@ body {
 }
 header {
     padding: 20px 0;
-    background-color: #505252;
+    /*background-color: #505252;*/
+    background-color: #888888
 }
 
 header .row,
@@ -101,6 +102,10 @@ section .row img {
     width: 100%;
 }
 
+#showcase .border {
+    background-color: #888888;
+}
+
 .btn.btn-primary {
     border-radius: 2px;
     border: 0px;
@@ -122,6 +127,6 @@ footer {
     border-color: #000000;
     background-size: cover;
     width: 100%;
-    background-color: #505252;
+    background-color: #888888;
     
 }
