--- a/AboutUs.css
+++ b/AboutUs.css
@@ -12,6 +12,7 @@
     font-size: 18px;
     line-height: 1.5;
     font-family: 'Roboto', sans-serif;
+    text-align: left;
     }
     
     #jcont {
